web/src/app/layout/menu/menu.component.scss
body{
  font-size: 13px !important;
  font-weight: 400 !important;
  line-height: 1.5rem !important;
}

.main-menu {
  margin-left: 0%;
}

.header.style2 .main-menu > li > a {
  padding: 15px 35px;
  color: #fff;
}

.main-menu > li > a {
  display: inline-block;
  padding: 20px 0;
  width: 100%;
  text-align: center;
  border-left-width: 1px;
  border-left-style: solid;
  border-left-color: rgba(56, 56, 56, 0.1);
  font-size: 16px;
  text-transform: uppercase;
  color: #333;
  font-family: "SolaimanLipi";
}

.header.style3 .main-menu {
  display: table;
  width: 100%;
  background-color: #00a388;
  padding: 0;
  /*margin-top: 5%;*/
  border-top: 1px solid #beeb9f;
}

.header.style2 .main-menu > li {

  display: inline-block;
}

.main-menu-wapper ul li:hover {
  /*outline: 5px solid coral;*/
  /*outline:2px solid blue;*/
}

.active {
  /*background-color: coral;*/
  //background-color: rgba(84, 12, 122, .9);
  transition: background-color .5s;
  /*border-bottom: 5px solid #6600CC;*/
}

.mat-button {
  line-height: unset !important;
}

/* sub-menu */
.sub-menu {
  left: 0%;
}

.main-menu .item-megamenu:hover .megamenu {
  opacity: 1;
  display: inline-block;
}

.sub-menu {
  position: absolute;
  left: 14.4% !important;
  opacity: 0;
  background-color: #fff;
  min-width: 225px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  padding: 0;
  margin: 0;
  -webkit-transition: opacity 0.4s ease, -webkit-transform 0.4s ease, visibility 0.4s linear 0s;
  -moz-transition: opacity 0.4s ease, -moz-transform 0.4s ease, visibility 0.4s linear 0s;
  -ms-transition: opacity 0.4s ease, -ms-transform 0.4s ease, visibility 0.4s linear 0s;
  -o-transition: opacity 0.4s ease, -o-transform 0.4s ease, visibility 0.4s linear 0s;
  transition: opacity .4s ease, transform .4s ease, visibility .4s linear 0s;
  z-index: 100;
  display: none;
}

.main-menu .show-submenu > .sub-menu {
  visibility: inherit;
  opacity: 1;
  filter: alpha(opacity=100);
}

.main-menu .sub-menu > li {
  padding: 0 20px;
}

.main-menu .sub-menu > li > a {
  display: inline-block;
  width: 100%;
  border-bottom: 1px solid #e8e8e8;
  padding: 13px 0;
  font-size: 14px;
  color: #666;
}

.main-menu .sub-menu > li:last-child > a {
  border-bottom: none;
}

.main-menu .sub-menu .sub-menu {
  left: 100%;
  top: 0;
}

.main-menu > li:nth-last-child(1) .sub-menu,
.main-menu > li:nth-last-child(2) .sub-menu {
  right: 0;
  left: inherit;
}

.main-menu > li:nth-last-child(1) .sub-menu .sub-menu,
.main-menu > li:nth-last-child(2) .sub-menu .sub-menu {
  left: inherit;
  right: 100%;
}

.main-menu .megamenu {
  padding: 30px;
}

.megamenu .widget {
  margin-bottom: 30px;
}

.megamenu .widget:last-child {
  margin-bottom: 0;
}

.megamenu .widget .widgettitle {
  font-size: 14px;
  text-transform: uppercase;
  margin-bottom: 20px;
}

.megamenu .widget_nav_menu ul {
  padding: 0;
}

.megamenu .widget_nav_menu li {
  list-style: none;
}

.megamenu .widget_nav_menu li > a {
  color: #666;
  display: inline-block;
  padding: 13px 0;
}

.megamenu .widget_nav_menu li:last-child > a {
  border: none;
}

.megamenu .widget_nav_menu li > a:hover {
  color: #eec15b;
}


//new from makzun
.mega-navbar {
  overflow: hidden;
  font-family: Arial;
  font-size: 14px;
  font-weight: 700;

  width: 100%;
}

.mega-dropdown .dropbtn {
  font-size: 14px;
  outline: none;
  color: #1a0b84;
  background-color: #ffe741;
  border: none;
  height: 38px;
  width: 100%;
  padding: 6px;
}

.mega-dropdown .dropbtn i {
  font-size: 18px;
  float: right;
  margin-left: 5px;
}

#darkness {
  background: rgba(0, 0, 0, 0.5) !important;
  transition: background 0.2s;
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: -9;
  display: none;
}

.mega-navbar:hover .dropdown-content {
  display: block;
}

.mega-navbar:hover + #darkness {
  display: block;
}

// try

.dropdown-content {
  @media only screen and (max-width: 1200px) {
    width: 942px;
  }

  display: none;
  position: absolute;
  background: transparent;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.1);
  border-radius: 5px;
  z-index: 10;
  left: -142%;
  padding-top: 10px;
  width: 1138px;

  .dropdown-content-inner {
    margin: -1px 0px 0px -1px;
    background: white;

    .side {
      border-right: 2px solid #2874f0;
    }

    .clicked {
      background: #f99633;
      color: #fff;
    }

    ul li {
      cursor: pointer;
      padding: 7px;
      float: left;
      min-width: 100%;
      font-size: 12px;
      border-bottom: 1px solid #f3f3f3;

      &:hover {
        background: #2874f0;
        color: #fff;
      }
    }
  }
}

.drop-arrow {
}

.category-list {
  padding: 0;
  //border-right: 1px solid rgba(84, 12, 122, 0.9);
  ul li {
  }
}

.subcategory-list {
  padding: 0;
}

.advertisement img {
  @media only screen and (max-width: 1200px) {
    margin-left: -14px;
    width: 469px;
    height: 400px;
  }
  margin-left: -14px;
  width: 570px;
  height: 400px;
}

button {
  border-radius: unset;
  //background: rgba(84, 12, 122, 0.9);
  //border-color: rgba(84, 12, 122, 0.9);
}

.btn-info:hover, .btn-info:focus, .btn-info.active, .btn-info:active, .open > .dropdown-toggle.btn-info {
  border-radius: unset;
  //background: rgba(84, 12, 122, 0.9);
  //border-color: rgba(84, 12, 122, 0.9);
}

.megamenu ul li {
  width: 100%;
}

.responsive-menu .burger_menu i {
  color: #ffffff;
}

.responsive-menu li:hover .burger_menu i {
  color: #ED1C24;
}

.dropdown-menu_burger_menu {
  display: none;
}

.responsive-menu li:hover .dropdown-menu_burger_menu {
  display: block;
}

/*for mobile menu*/
#user-icon {
  font-size: 18px;
  display: inline-block;
  transform: translateY(4px);
}

.mobile-menu {
  max-height: 68vh;
  overflow-y: scroll;
}

.mobile-menu-container {
  background-color: white;
  margin-left: 0;
  margin-right: 0;
  position: fixed;
  bottom: 0;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: 100%;
  z-index: 1000;
  padding-top: 10px;
  -webkit-box-shadow: 0px 1px 12px rgba(50, 50, 50, 0.15);
  -moz-box-shadow: 0px 1px 12px rgba(50, 50, 50, 0.15);
  box-shadow: 0px 1px 12px rgba(50, 50, 50, 0.15);
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
}

.logo-icon {
  background: white;
  border-radius: 50%;
  width: 60px;
  padding: 5px;
  -webkit-box-shadow: 0px 1px 6px rgba(50, 50, 50, 0.30);
  -moz-box-shadow: 0px 1px 6px rgba(50, 50, 50, 0.30);
  box-shadow: 0px 1px 6px rgba(50, 50, 50, 0.30);
}

.scrollable-menu {
  position: relative;
  background-color: #2f2727;
  padding-left: 10px;
  padding-right: 10px;
}

.icon-style {
  display: flex;
  flex-direction: column;
  text-align: center;
  margin-bottom: 5px;
}

.left-right-arrow {
  position: absolute;
  color: white;
  transform: translate(0%, -50%);
}

.subcategory-section {
  z-index: 1000;
  position: absolute;
  width: 100%;
  overflow: scroll;
  height: 68vh;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.subcategory-section::-webkit-scrollbar {
  display: none;
}

.Category {
  display: flex;
  flex-direction: row;
  overflow-x: scroll;
}

.categoryName {
  color: white;
  font-size: 13px !important;
  font-weight: 400 !important;
  text-transform: uppercase;
  margin-bottom: 0px !important;
}

.subcategory-name {
  background: none;
  border: none;
  text-align: left;
  color: white;
  font-weight: bold;
  border-bottom: 1px solid darkgray;
  margin-bottom: 0px;
}

@media screen and (max-width: 425px) {
  .remove-menu {
    display: none;
  }
}

